index html ödev 2 eklentisi yapıldı

--- a/index.html
+++ b/index.html
@@ -25,5 +25,49 @@
 <h3>JavaScript</h3>
 <p> HTML ve CSS ile birlikte World Wide Web'in temel teknolojilerinden biri olan programlama dilidir.</p>
 
+<!-- ilgi alanlarım -->
+<hr>
+
+<h2>İlgi Alanlarım</h2>
+<ol>
+    <li>Filmler
+        <ul type="circle">
+            <li><a href="https://www.imdb.com/title/tt0167260/" target="_blank">The Lord of the Rings: The Return of the King</a></li>
+            <li>The Godfather </li>
+            <li>The Matrix</li>
+        </ul>
+    </li>
+    <li>Diziler
+        <ul type="square">
+            <li><a href="https://www.imdb.com/title/tt0386676/" target="_blank">The Office</a></li>
+            <li>Sons of Anarchy</li>
+            <li>Breaking Bad</li>
+        </ul>
+    </li>
+    <li>Kitaplar
+        <ul type="disc">
+            <li><a href="https://www.goodreads.com/review/show/1170645487">Ölüm Bir Varmış Bir Yokmuş</a></li>
+            <li>1984</li>
+            <li>Game of Thrones
+            </li>
+        </ul>
+    </li>
+</ol>
+
+<br>
+
+<a href="https://www.imdb.com/title/tt0386676/">
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/58/TheOffice_S7_DVD.jpg" alt="the office kapak resmi" title="IMDB adresine gştmek için tıklayın" width="400" height="500" >
+</a>
+
+<br>
+
+<div>
+    <img src="https://upload.wikimedia.org/wikipedia/tr/2/28/Y%C3%BCz%C3%BCklerinEfendisi%27Kral%C4%B1nD%C3%B6n%C3%BC%C5%9F%C3%BC-film.jpg" alt="The Lord of the Rings: The Return of the King kapak resmi" width="400" height="500">
+    <p><b>Yüzüklerin Efendisi: Kralın Dönüşü</b>, <i>Peter Jackson</i>'ın yönetmenliğini yaptığı, <ins>J. R. R. Tolkien</ins>'in <span style="color: red;">Yüzüklerin Efendisi</span> kitaplarının ikinci ve üçüncü bölümlerinden uyarlanan <b>2003</b> yılında gösterime giren fantezi filmidir.</p>
+</div>
+
+
+
 </body>
 </html>
